--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Skropay is a secure transaction platform that completely protects you from being scammed when you want to buy or sell with someone you don't know."
+      content="Delivery pay is a secure transaction platform that completely protects you from being scammed when you want to buy or sell with someone you don't know."
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
@@ -24,12 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Skropay</title>
+    <title>Delivery pay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="portal"></div>
+    <div id="confirm"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
