--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,28 @@
     <div id="root"></div>
     <div id="portal"></div>
     <div id="confirm"></div>
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          appId: "582042272810863",
+          // xfbml: true,
+          version: "v11.0",
+          status: true,
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+          return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
   </body>
 </html>
