--- a/client/public/index.html
+++ b/client/public/index.html
@@ -116,7 +116,7 @@
           appId: "582042272810863",
           // xfbml: true,
           version: "v11.0",
-          status: true,
+          // status: true,
         });
         FB.AppEvents.logPageView();
       };
